syntax = "proto2";
package buffer;

//副本刷新
message CGDuplicateCheckProto {
	optional int32 msgType	= 1[default = 25102];// 协议号
	optional int32 cityId	= 2; // 副本所在的城市Id
	optional int32 dupId	= 3; // 副本Id
	optional int32 index	= 4; // 副本消耗资源索引
}